style.css
* {
  font-family: inherit;
  font-size: 100%;
  font-style: inherit;
  font-weight: inherit;
  text-decoration: none;
  border: 0;
  margin: 0;
  outline: 0;
  padding: 0;
  vertical-align: baseline;
}

html {
  height: 100%;
  background: #F4F5F6;
  font: 14px/1.4 "Helvetica Neue", "Ubuntu", "Roboto", "Segoe UI", "Lucida Grande", Arial, sans-serif;
  color: #5A5B5C;
  -webkit-font-smoothing: antialiased;
}

body {
  height: 100%;
  text-align: center;
}

article {
  display: inline-block;
  text-align: left;
  background: #FFF;
  box-shadow: 0 0 0 1px #EAEBEC;
  min-height: 100%;
  max-width: 800px;
}

article>:first-child {
  margin-top: 2rem;
}

article>:last-child {
  margin-bottom: 2rem;
}

table {
  margin: .8rem auto 1.2rem auto;
  border-collapse: collapse;
}

td, th {
  border: 1px solid #DADBDC;
  padding: .2rem .8rem;
}

th {
  background: #F4F5F6;
  padding: .4rem .8rem;
}

a {
  border-bottom: 1px solid #09C;
  color: #5A5B5C;
}

a:hover {
  color: #09C;
}

img {
  border: 0;
  max-width: 100%;
}

strong {
  font-weight: 700;
}

em {
  font-style: italic;
}

del {
  text-decoration: line-through;
}

p, ul, ol {
  margin: 1rem 0;
}

li {
  margin: .2rem 0;
}

h1, h2, h3, h4, h5, h6, pre, blockquote {
  margin: 2em 0 1em;
}

h1, h2, h3, h4, h5, h6, pre, p, ul, ol, blockquote {
  padding: 0 2rem;
}

ul p, ol p {
  padding: 0;
}

h1 {
  font-size: 4rem;
  font-weight: 100;
  border-bottom: 1px solid #EAEBEC;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.75rem;
}

h4 {
  font-size: 1.5rem;
}

h5 {
  font-size: 1.25rem;
}

h6 {
  font-weight: bold;
}

hr {
  margin: 2rem 0;
  border-bottom: 1px solid #EAEBEC;
}

blockquote {
  font-family: georgia, serif;
  font-size: 1.2rem;
  font-style: italic;
  border-top: 1px solid #EAEBEC;
  border-bottom: 1px solid #EAEBEC;
  background: #FAFBFC;
}

blockquote:before {
  content: "\201C";
  position: absolute;
  font-size: 4rem;
  margin: 0 0 0 -1rem;
  font-family: georgia, serif;
  color: #09C;
}

code, pre {
  font-family: Monaco, "Andale Mono", "Ubuntu Mono", Consolas, monospace;
}

code {
  border: 1px solid #EAEBEC;
  background: #F7F8F9;
  padding: 0 .2rem;
  font-size: .9rem;
  border-radius: .2rem;
}

pre {
  overflow: auto;
  margin-bottom: 1.6rem;
  padding: 1rem 2rem;
  font-size: .9rem;
  border-top: 1px solid #EAEBEC;
  border-bottom: 1px solid #EAEBEC;
  background: #F7F8F9;
  white-space: pre;
}

pre code {
  display: block;
  background: none;
  border: 0;
  padding: 0;
}

blockquote pre {
  border: 1px solid #EAEBEC;
}

/*
 * Syntax highlighting
 */

pre .string,
pre .title,
pre .constant,
pre .parent,
pre .tag .value,
pre .rules .value,
pre .rules .value .number,
pre .preprocessor,
pre .haml .symbol,
pre .ruby .symbol,
pre .ruby .symbol .string,
pre .aggregate,
pre .template_tag,
pre .django .variable,
pre .smalltalk .class,
pre .addition,
pre .flow,
pre .stream,
pre .bash .variable,
pre .apache .tag,
pre .apache .cbracket,
pre .tex .command,
pre .tex .special,
pre .erlang_repl .function_or_atom,
pre .asciidoc .header,
pre .markdown .header {
  color: #690;
}

pre .comment,
pre .annotation,
pre .template_comment,
pre .diff .header,
pre .chunk,
pre .asciidoc .blockquote,
pre .markdown .blockquote {
  color: #AAABAC;
}

pre .number,
pre .date,
pre .regexp,
pre .literal,
pre .smalltalk .symbol,
pre .smalltalk .char,
pre .go .constant,
pre .change,
pre .asciidoc .bullet,
pre .markdown .bullet,
pre .asciidoc .link_url,
pre .markdown .link_url {
  color: #F80;
}

pre .label,
pre .javadoc,
pre .ruby .string,
pre .decorator,
pre .filter .argument,
pre .localvars,
pre .array,
pre .attr_selector,
pre .important,
pre .pseudo,
pre .pi,
pre .haml .bullet,
pre .doctype,
pre .deletion,
pre .envvar,
pre .shebang,
pre .apache .sqbracket,
pre .nginx .built_in,
pre .tex .formula,
pre .erlang_repl .reserved,
pre .prompt,
pre .asciidoc .link_label,
pre .markdown .link_label,
pre .vhdl .attribute,
pre .clojure .attribute,
pre .asciidoc .attribute,
pre .coffeescript .property {
  color: #09C;
}

pre .keyword,
pre .id,
pre .phpdoc,
pre .title,
pre .built_in,
pre .aggregate,
pre .css .tag,
pre .javadoctag,
pre .phpdoc,
pre .yardoctag,
pre .smalltalk .class,
pre .winutils,
pre .bash .variable,
pre .apache .tag,
pre .go .typename,
pre .tex .command,
pre .asciidoc .strong,
pre .markdown .strong,
pre .request,
pre .status {
  font-weight: bold;
}

pre .asciidoc .emphasis,
pre .markdown .emphasis {
  font-style: italic;
}

pre .nginx .built_in {
  font-weight: normal;
}

pre .coffeescript .javascript,
pre .javascript .xml,
pre .tex .formula,
pre .xml .javascript,
pre .xml .vbscript,
pre .xml .css,
pre .xml .cdata {
  opacity: 0.5;
}

#install {
  background: #3C3F41;
  color: #FFF;
  font-size: 2rem;
  width: 4em;
  margin: 2rem;
  padding: .2em;
  text-align: center;
  border-radius: .2rem;
  cursor: pointer;
}

#install:hover {
  background: #09C;
}

@media screen and (min-width: 480px) {
  html {
    font-size: 16px;
  }
}

@media screen and (min-width: 800px) {
  html {
    font-size: 18px;
  }
}

@media print {
  html, code, pre code, h1, h2, h3, h4, h5, h6 {
    color: #000;
  }
  table, pre, blockquote, img {
    page-break-inside: avoid;
  }
}

